Fixed overflow rendering on tagInput tags

--- a/src/components/TagInput/next/Taginput.module.scss
+++ b/src/components/TagInput/next/Taginput.module.scss
@@ -71,13 +71,13 @@ $sizes: (
 
 .tagContainer {
   display: flex;
-  max-width: 350px;
-  max-height: 80px;
+  width: fit-content;
+  height: fit-content;
   flex-wrap: wrap;
   align-items: center;
   gap: var(--spacing-xs);
   width: fit-content;
-  overflow-y: auto;
+  overflow: show;
 
   @include bp.down(xs) {
     max-width: 100%;
